# topwrap-utils

./: .ci.yml  .gitmodules  README.md  justfile  pyproject.toml
docs/source/: conf.py  index.md  syntax.md  usage.md
docs/source/dev_docs/: mmap.md  setup.md
examples/: README.md
examples/generic-device/: Makefile  design.yaml
examples/generic-device/repo/cores/generic_core/: module.yaml
examples/ic-network/: topwrap.yaml
examples/ic-network/repo/cores/generic_bridge/: module.yaml
examples/ic-network/repo/cores/generic_peripheral/: module.yaml
examples/ic-network/repo/interfaces/: vendor_libdefault_generic_if.yaml
renode_plugin/: __init__.py  main.py
topwrap-axi-interconnect-generator-plugin/: justfile  pyproject.toml
topwrap-axi-interconnect-generator-plugin/axi_interconnect_generator_plugin/: __init__.py
topwrap-axi-interconnect-generator-plugin/examples/: Makefile  simple_interconnect.py
topwrap-ipxact-parser/: .gitignore  README.md  justfile  pyproject.toml
topwrap-ipxact-parser/examples/: parse_example.py  simple_component.xml
topwrap-ipxact-parser/patches/: 0001-Add-no-pattern-validator-flag.patch  0002-Change-complexContent-to-simpleContent-in-abstractio.patch  0003-Change-how-the-access-element-is-referenced-in-memor.patch
topwrap-renode-plugin/: justfile  pyproject.toml
topwrap-renode-plugin/docs/source/: introduction.md  usage.md
topwrap-renode-plugin/examples/: Makefile
topwrap-renode-plugin/examples/ic-network/: design.yaml
