[project]
name = "axi_interconnect_generator_plugin"
version = "0.0.1"
requires-python = ">=3.9"
authors = [{name = "Antmicro"}]
description = ""
dependencies = [
  "PyYAML"
]

[tool.setuptools]
packages = ["axi_interconnect_generator_plugin"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
axi_interconnect_generator_plugin = [
  "**/*.sv",
  "**/*.v",
  "**/*.svh",
  "**/scripts/*.py"
]

[project.optional-dependencies]
lint = [
  "codespell==2.3.0",
  "ruff==0.12.1"
]

[tool.ruff]
line-length = 100
extend-exclude = [
  "__pycache__",
  ".venv",
  "uv.lock",
  "third_party"
]

[tool.ruff.lint]
select = [
  "B",
  "C9",
  "E",
  "F",
  "I",
  "W",
]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.codespell]
skip = "build,.venv,.git,__pycache__,uv.lock,third_party"
